force-app/main/default/objects/Cycle_Invoice_Items__c/Cycle_Invoice_Items__c.object-meta.xml
<CustomObject>
    <label>Cycle Invoice Item</label>
    <nameField>
        <label>Cycle Invoice Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycle Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>