force-app/main/default/objects/Cycle_Invoice_Items__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVF</fullName>
            </value>
            <value>
                <fullName>FET &amp; Freeze All</fullName>
            </value>
            <value>
                <fullName>VOT</fullName>
            </value>
            <value>
                <fullName>IUI</fullName>
            </value>
            <value>
                <fullName>Andrology</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>PGS &amp; Assisted Hatching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>