force-app/main/default/objects/Cycle_Invoice_Items__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>Invoices__c</referenceTo>
    <relationshipLabel>Cycle Invoice Items</relationshipLabel>
    <relationshipName>Cycle_Invoice_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>