force-app/main/default/objects/Cycle_Invoice_Items__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>